feat: gradle task azureFunctionsRun is ok but http request throw exception (see Readme.md)